--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@
     width: 20%;
 }
 
+#topmenu {
+    background-color: #AFCCA5;
+    width: 100px;
+    display: table-cell;
+    padding: 30px;
+}
+
 .col-container {
     display: table;
     width: 100%;
